unpackaged/main/default/objects/legaldeskapp__LegalDesk_Mapping__mdt/legaldeskapp__LegalDesk_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>Streamline AI Mapping</label>
    <pluralLabel>Streamline AI Mappings</pluralLabel>
</CustomObject>