unpackaged/main/default/objects/legaldeskapp__LegalDesk_Mapping__mdt/fields/legaldeskapp__Custom_Form__c.field-meta.xml
<CustomField>
    <fullName>legaldeskapp__Custom_Form__c</fullName>
    <description>Name of the custom form from Streamline AI WebApp</description>
    <inlineHelpText>If you selected &quot;Custom Form&quot; for Type, please enter the name of the custom form here.</inlineHelpText>
    <label>Custom Form</label>
    <length>255</length>
    <type>Text</type>
</CustomField>