unpackaged/main/default/objects/legaldeskapp__LegalDesk_Mapping__mdt/fields/legaldeskapp__Custom_Form_Constant_Id__c.field-meta.xml
<CustomField>
    <fullName>legaldeskapp__Custom_Form_Constant_Id__c</fullName>
    <label>Custom Form Constant Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>