unpackaged/main/default/objects/legaldeskapp__LegalDesk_Mapping__mdt/fields/legaldeskapp__Custom_Form_FormOrder__c.field-meta.xml
<CustomField>
    <fullName>legaldeskapp__Custom_Form_FormOrder__c</fullName>
    <description>This field stores the Integer value of the formOrder property for a form/request type.</description>
    <label>Custom Form FormOrder</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>