unpackaged/main/default/objects/legaldeskapp__LegalDesk_Mapping__mdt/fields/legaldeskapp__Data_Type__c.field-meta.xml
<CustomField>
    <fullName>legaldeskapp__Data_Type__c</fullName>
    <description>This field stores the input data type of the Streamline AI field</description>
    <inlineHelpText>Select the data type of the Streamline AI field to which this field is mapped.</inlineHelpText>
    <label>Data Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Text</fullName>
                <default>true</default>
                <label>Text</label>
            </value>
            <value>
                <fullName>Paragraph</fullName>
            </value>
            <value>
                <fullName>Date</fullName>
            </value>
            <value>
                <fullName>Futuredate</fullName>
            </value>
            <value>
                <fullName>Currency</fullName>
            </value>
            <value>
                <fullName>Number</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Radio</fullName>
            </value>
            <value>
                <fullName>Checkbox</fullName>
            </value>
            <value>
                <fullName>Select</fullName>
            </value>
            <value>
                <fullName>Link</fullName>
            </value>
            <value>
                <fullName>Richtext</fullName>
            </value>
            <value>
                <fullName>Fixedtext</fullName>
            </value>
            <value>
                <fullName>Custom Attachment</fullName>
            </value>
            <value>
                <fullName>Address</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>