unpackaged/main/default/objects/legaldeskapp__LegalDesk_Mapping__mdt/fields/legaldeskapp__Display__c.field-meta.xml
<CustomField>
    <fullName>legaldeskapp__Display__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox will indicate whether or not we want to show this field in the form when submitting to Streamline AI.</description>
    <label>Display</label>
    <type>Checkbox</type>
</CustomField>