unpackaged/main/default/objects/legaldeskapp__LegalDesk_Mapping__mdt/fields/legaldeskapp__Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>legaldeskapp__Field_API_Name__c</fullName>
    <description>API name of the Salesforce field</description>
    <label>Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>