unpackaged/main/default/objects/legaldeskapp__LegalDesk_Mapping__mdt/fields/legaldeskapp__IsActiveField__c.field-meta.xml
<CustomField>
    <fullName>legaldeskapp__IsActiveField__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Field Active?</label>
    <type>Checkbox</type>
</CustomField>