unpackaged/main/default/objects/legaldeskapp__LegalDesk_Mapping__mdt/fields/legaldeskapp__LegalDesk_Field__c.field-meta.xml
<CustomField>
    <fullName>legaldeskapp__LegalDesk_Field__c</fullName>
    <description>Streamline AI field</description>
    <label>Streamline AI Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>