unpackaged/main/default/objects/legaldeskapp__LegalDesk_Mapping__mdt/fields/legaldeskapp__LegalDesk_Field_Id__c.field-meta.xml
<CustomField>
    <fullName>legaldeskapp__LegalDesk_Field_Id__c</fullName>
    <label>Streamline AI Field Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>