unpackaged/main/default/objects/legaldeskapp__LegalDesk_Mapping__mdt/fields/legaldeskapp__Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>legaldeskapp__Object_API_Name__c</fullName>
    <description>Object of the Salesforce mapping field</description>
    <label>Object API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>