unpackaged/main/default/objects/legaldeskapp__LegalDesk_Mapping__mdt/fields/legaldeskapp__Question__c.field-meta.xml
<CustomField>
    <fullName>legaldeskapp__Question__c</fullName>
    <label>Question</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>