unpackaged/main/default/objects/legaldeskapp__LegalDesk_Mapping__mdt/fields/legaldeskapp__Relationship_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>legaldeskapp__Relationship_Field_API_Name__c</fullName>
    <label>Relationship Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>