unpackaged/main/default/objects/legaldeskapp__LegalDesk_Mapping__mdt/fields/legaldeskapp__Template_Question__c.field-meta.xml
<CustomField>
    <fullName>legaldeskapp__Template_Question__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Template Question</label>
    <type>Checkbox</type>
</CustomField>