unpackaged/main/default/objects/legaldeskapp__LegalDesk_Mapping__mdt/fields/legaldeskapp__Type__c.field-meta.xml
<CustomField>
    <fullName>legaldeskapp__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sales</fullName>
                <default>true</default>
                <label>Sales</label>
            </value>
            <value>
                <fullName>NDA</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Question</fullName>
            </value>
            <value>
                <fullName>Privacy</fullName>
            </value>
            <value>
                <fullName>Bidirectional</fullName>
            </value>
            <value>
                <fullName>User</fullName>
            </value>
            <value>
                <fullName>Document</fullName>
            </value>
            <value>
                <fullName>Custom Form</fullName>
            </value>
            <value>
                <fullName>Custom Form Id</fullName>
            </value>
            <value>
                <fullName>Endpoint</fullName>
            </value>
            <value>
                <fullName>Token</fullName>
            </value>
            <value>
                <fullName>Vendor</fullName>
            </value>
            <value>
                <fullName>Field Id for SFDC Id</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>